dataset1235/2025-2/610742602/users/2183191739/executions/677928262_2383239197.log
== RUN (2025-08-22 15:13:10)
-- CODE: 
a= float(input("qual a distancia entre você e a aprimeira arvore?: "))
b= float(input("qual a distancia entre você e a segunda arvore?: "))
c= float(input("qual o angulo entre a e b em graus?: "))

import math
d=math.raiz_quadrada()
e=math.cos(x)

f=d(a**2+b**2-2*a*b*cos(c))

print(round(f,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.raiz_quadrada()
      ^^^^^^^^^^^^^^^^^^
AttributeError: module 'math' has no attribute 'raiz_quadrada'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.raiz_quadrada()
      ^^^^^^^^^^^^^^^^^^
AttributeError: module 'math' has no attribute 'raiz_quadrada'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.raiz_quadrada()
      ^^^^^^^^^^^^^^^^^^
AttributeError: module 'math' has no attribute 'raiz_quadrada'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.raiz_quadrada()
      ^^^^^^^^^^^^^^^^^^
AttributeError: module 'math' has no attribute 'raiz_quadrada'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.raiz_quadrada()
      ^^^^^^^^^^^^^^^^^^
AttributeError: module 'math' has no attribute 'raiz_quadrada'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.raiz_quadrada()
      ^^^^^^^^^^^^^^^^^^
AttributeError: module 'math' has no attribute 'raiz_quadrada'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:14:19)
-- CODE: 
a= float(input("qual a distancia entre você e a aprimeira arvore?: "))
b= float(input("qual a distancia entre você e a segunda arvore?: "))
c= float(input("qual o angulo entre a e b em graus?: "))

import math

e=math.cos(x)

f=(a**2+b**2-2*a*b*cos(c))**0.5

print(round(f,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e=math.cos(x)
               ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e=math.cos(x)
               ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e=math.cos(x)
               ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e=math.cos(x)
               ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e=math.cos(x)
               ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e=math.cos(x)
               ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 17:31:41)
-- CODE: 
a= float(input("qual a distancia entre você e a primeira arvore?: "))
b= float(input("qual a distancia entre você e a segunda arvore?: "))
c= float(input("qual o angulo entre a e b em graus?: "))

import math

ang=math.radians(c)

cs= math.cos(ang)

f= (a**2+b**2-2*a*b*cs)**0.5

print(round(f,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
qual a distancia entre você e a primeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
qual a distancia entre você e a primeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
qual a distancia entre você e a primeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
qual a distancia entre você e a primeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
qual a distancia entre você e a primeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
qual a distancia entre você e a primeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:18:33)
-- CODE: 
a= float(input("qual a distancia entre você e a aprimeira arvore?: "))
b= float(input("qual a distancia entre você e a segunda arvore?: "))
c= float(input("qual o angulo entre a e b em graus?: "))

import math 
u=ang = 90
cos(ang)
cos(radians(ang))

e= math.cos

f=(a**2+b**2-2*a*b*cos(c))**0.5

print(round(f,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos(ang)
    ^^^
NameError: name 'cos' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos(ang)
    ^^^
NameError: name 'cos' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos(ang)
    ^^^
NameError: name 'cos' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos(ang)
    ^^^
NameError: name 'cos' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos(ang)
    ^^^
NameError: name 'cos' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos(ang)
    ^^^
NameError: name 'cos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 17:29:39)
-- CODE: 
a= float(input("qual a distancia entre você e a aprimeira arvore?: "))
b= float(input("qual a distancia entre você e a segunda arvore?: "))
c= float(input("qual o angulo entre a e b em graus?: "))

import math

ang=math.radians(c)

cs= math.cos(ang)

f= (a**2+b**2-2*a*b*cs**0.5

print(round(f,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 11
    f= (a**2+b**2-2*a*b*cs**0.5
       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 11
    f= (a**2+b**2-2*a*b*cs**0.5
       ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 11
    f= (a**2+b**2-2*a*b*cs**0.5
       ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 11
    f= (a**2+b**2-2*a*b*cs**0.5
       ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 11
    f= (a**2+b**2-2*a*b*cs**0.5
       ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 11
    f= (a**2+b**2-2*a*b*cs**0.5
       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:19:01)
-- CODE: 
a= float(input("qual a distancia entre você e a aprimeira arvore?: "))
b= float(input("qual a distancia entre você e a segunda arvore?: "))
c= float(input("qual o angulo entre a e b em graus?: "))

import math 
u=ang = 90
math.cos(ang)
math.cos(radians(ang))

e= math.cos

f=(a**2+b**2-2*a*b*cos(c))**0.5

print(round(f,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    math.cos(radians(ang))
             ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    math.cos(radians(ang))
             ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    math.cos(radians(ang))
             ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    math.cos(radians(ang))
             ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    math.cos(radians(ang))
             ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    math.cos(radians(ang))
             ^^^^^^^
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 17:29:48)
-- CODE: 
a= float(input("qual a distancia entre você e a aprimeira arvore?: "))
b= float(input("qual a distancia entre você e a segunda arvore?: "))
c= float(input("qual o angulo entre a e b em graus?: "))

import math

ang=math.radians(c)

cs= math.cos(ang)

f= (a**2+b**2-2*a*b*cs)**0.5

print(round(f,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
qual a distancia entre você e a aprimeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
qual a distancia entre você e a aprimeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
qual a distancia entre você e a aprimeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
qual a distancia entre você e a aprimeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
qual a distancia entre você e a aprimeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
qual a distancia entre você e a aprimeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:12:07)
-- CODE: 
a= float(input("qual a distancia entre você e a aprimeira arvore?: "))
b= float(input("qual a distancia entre você e a segunda arvore?: "))
c= float(input("qual o angulo entre a e b em graus?: "))

import math
d=math.sqrt(x)
e=math.cos(x)

f=d(a**2+b**2-2*a*b*cos(c))

print(round(f,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.sqrt(x)
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.sqrt(x)
                ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.sqrt(x)
                ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.sqrt(x)
                ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.sqrt(x)
                ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.sqrt(x)
                ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:12:45)
-- CODE: 
a= float(input("qual a distancia entre você e a aprimeira arvore?: "))
b= float(input("qual a distancia entre você e a segunda arvore?: "))
c= float(input("qual o angulo entre a e b em graus?: "))

import math
d=math.sqrt()
e=math.cos(x)

f=d(a**2+b**2-2*a*b*cos(c))

print(round(f,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.sqrt()
      ^^^^^^^^^^^
TypeError: math.sqrt() takes exactly one argument (0 given)
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.sqrt()
      ^^^^^^^^^^^
TypeError: math.sqrt() takes exactly one argument (0 given)
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.sqrt()
      ^^^^^^^^^^^
TypeError: math.sqrt() takes exactly one argument (0 given)
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.sqrt()
      ^^^^^^^^^^^
TypeError: math.sqrt() takes exactly one argument (0 given)
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.sqrt()
      ^^^^^^^^^^^
TypeError: math.sqrt() takes exactly one argument (0 given)
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d=math.sqrt()
      ^^^^^^^^^^^
TypeError: math.sqrt() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 17:29:57)
-- CODE: 
a= float(input("qual a distancia entre você e a primeira arvore?: "))
b= float(input("qual a distancia entre você e a segunda arvore?: "))
c= float(input("qual o angulo entre a e b em graus?: "))

import math

ang=math.radians(c)

cs= math.cos(ang)

f= (a**2+b**2-2*a*b*cs)**0.5

print(round(f,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
qual a distancia entre você e a primeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
qual a distancia entre você e a primeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
qual a distancia entre você e a primeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
qual a distancia entre você e a primeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
qual a distancia entre você e a primeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
qual a distancia entre você e a primeira arvore?: qual a distancia entre você e a segunda arvore?: qual o angulo entre a e b em graus?: 9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:11:59)
-- CODE: 
a= float(input?("qual a distancia entre você e a aprimeira arvore?: "))
b= float(input?("qual a distancia entre você e a segunda arvore?: "))
c= float(input?("qual o angulo entre a e b em graus?: "))

import math
d=math.sqrt(x)
e=math.cos(x)

f=d(a**2+b**2-2*a*b*cos(c))

print(round(f,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a= float(input?("qual a distancia entre você e a aprimeira arvore?: "))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a= float(input?("qual a distancia entre você e a aprimeira arvore?: "))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a= float(input?("qual a distancia entre você e a aprimeira arvore?: "))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a= float(input?("qual a distancia entre você e a aprimeira arvore?: "))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a= float(input?("qual a distancia entre você e a aprimeira arvore?: "))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a= float(input?("qual a distancia entre você e a aprimeira arvore?: "))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 17:29:27)
-- CODE: 
a= float(input("qual a distancia entre você e a aprimeira arvore?: "))
b= float(input("qual a distancia entre você e a segunda arvore?: "))
c= float(input("qual o angulo entre a e b em graus?: "))

import math

ang=math.radians(c)

cs= math.cos(ang)

f=(a**2+b**2-2*a*b*cs**0.5

print(round(f,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 11
    f=(a**2+b**2-2*a*b*cs**0.5
      ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 11
    f=(a**2+b**2-2*a*b*cs**0.5
      ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 11
    f=(a**2+b**2-2*a*b*cs**0.5
      ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 11
    f=(a**2+b**2-2*a*b*cs**0.5
      ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 11
    f=(a**2+b**2-2*a*b*cs**0.5
      ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 11
    f=(a**2+b**2-2*a*b*cs**0.5
      ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
